--- a/ECommerce.Entity/ECommerce.Entity.csproj
+++ b/ECommerce.Entity/ECommerce.Entity.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Concrete\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.15" />
+  </ItemGroup>
+
 </Project>
